Wed Jul 19 14:07:57 BST 2000  Tony Gale <gale@gtk.org>

	* docs/tutorial/gtk-tut.sgml: Yet more clean ups.
	  Completes first pass. Hurrah!

Tue Jul 18 17:17:55 BST 2000  Tony Gale <gale@gtk.org>

	* docs/tutorial/gtk-tut.sgml: More clean ups.

Mon Jul 17 18:52:38 2000  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c (gtk_entry_draw_text): Restore code to
	paint the background of the text area which was accidentally
	removed at some point.

	* gtk/gtkrc.[ch] gtk/gtkstyle.[ch] gtk/gtkthemes.[ch]: 
	  
	 - Move	most of the functionality from the theme vtable
	   into GtkRcStyleClass and GtkStyleClass. The moved
	   vtable functions were changed a bit in the move to
	   work better in their new home.

	 - Get rid of the engine and engine_data fields from
	   GtkRcStyle and GtkStyle; instead the theme
	   engine derives theme-specific subclasses of GtkRcStyle
	   and GtkStyle

	 - Add extra dlsym() found entry point to themes,
	   theme_create_rc_style().

	* gtk/gtkstyle.c: Copy xthickness, ythickness fields
	in gtk_style_real_copy.

 	* gtk/themes.[ch]: add a function gtk_theme_engine_register_type()
	to register a type associated with an engine. (The engine
	won't be unloaded as there is an instance of the type.)


Mon Jul 17 18:19:06 BST 2000  Tony Gale <gale@gtk.org>

	* docs/tutorial/gtk-tut.sgml: Clean ups.

Mon Jul 17 13:59:29 BST 2000  Tony Gale <gale@gtk.org>

	* docs/tutorial/gtk-tut.sgml: Initial DocBook version. Lots
	  of cleaning up to do.

2000-07-15  Tor Lillqvist  <tml@iki.fi>

	* gdk/testgdk.c: New file, quick hack to test backends for
	pixel-by-pixel correctness of the most simple graphic operations.

Fri Jul 14 20:30:25 2000  Owen Taylor  <otaylor@redhat.com>

        * Really release 1.3.1
	
	* gtk-config-2.0.in gtk-2.0.m4: Fix up to correspond to new
	include structure.

Fri Jul 14 18:40:39 2000  Owen Taylor  <otaylor@redhat.com>

	* Released 1.3.1

Fri Jul 14 16:21:26 2000  Owen Taylor  <otaylor@redhat.com>
